@@ -1,1 +1,0 @@
-Remove deprecated VisualTest::DrawEmpiricalCDF,DrawHistogram,DrawClouds
